Here is what I have so far for the keyboard shortcuts It looks a bit better now. It has a popup to jump directly to any bundle. It has a popup to filter the type of shortcuts displayed (which seems to be exposing a crashing bug :/)
git-svn-id: http://macromates.com/svn/Bundles/trunk@806 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Bundles/LanguageDefinition.tmbundle/Stylesheets/list_shortcuts.css
+++ b/Bundles/LanguageDefinition.tmbundle/Stylesheets/list_shortcuts.css
@@ -1,12 +1,20 @@
+/* This is here so it's easy to locate */
+.keyEquivalent { display: table-row; }
+.keyEquivalentBlock { display: block; }
+.tabTrigger { display: table-row; }
+.tabTriggerBlock { display: block; }
+.trigger { display: table-row; }
+.triggerBlock { display: block; }
+
 /* general stuff.. */
 body {
-   font-family: "Lucida Grande", sans-serif;
-   font-size: 13px;
+	font-family: "Lucida Grande", sans-serif;
+	font-size: 12px;
 }
 
 h1 {
-   font-size: 24px;
-   text-shadow: #ddd 2px 3px 3px;
+	font-size: 24px;
+	text-shadow: #ddd 2px 3px 3px;
 }
 
 /* make horizontal rules slightly less heavy */
@@ -19,21 +27,23 @@ border: 0px;
 
 /* about links.. */
 a:link, a:visited {
-   background-color: transparent;
-   color: #35a;
-   text-decoration: underline;
-   padding-left: 1px;
-   padding-right: 1px;
+	background-color: transparent;
+	color: #35a;
+	text-decoration: underline;
+	padding-left: 1px;
+	padding-right: 1px;
 }
 
 a:hover, a:active {
-   background-color: #136;
-   color: #fff;
-   text-decoration: none;
+	background-color: #136;
+	color: #fff;
+	text-decoration: none;
 }
 
+/* Table styling */
 
-/* for everything alternating: */
-.alternate {
-   background-color: #f2f2f2;
-}
+table { width: 100%; }
+tr { }
+.name { }
+.type { width: 10em; }
+.shortcut { width: 9em; }
